force-app/main/default/objects/Customer_Commercial_Entitlement__c/Customer_Commercial_Entitlement__c.object-meta.xml
<CustomObject>
    <label>Customer Commercial Entitlement</label>
    <pluralLabel>Customer Commercial Entitlements</pluralLabel>
    <nameField>
        <displayFormat>CCE-{00000000}</displayFormat>
        <label>Entitlement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>