force-app/main/default/objects/Customer_Commercial_Entitlement__c/fields/Effective_End_On__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_On__c</fullName>
    <label>Effective End On</label>
    <type>Date</type>
</CustomField>