force-app/main/default/objects/Customer_Commercial_Entitlement__c/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <label>Entitlement Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>