force-app/main/default/objects/Customer_Commercial_Entitlement__c/fields/External_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Subscription_Id__c</fullName>
    <label>External Subscription Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>