force-app/main/default/objects/Customer_Commercial_Entitlement__c/fields/Renewal_Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notice_Days__c</fullName>
    <label>Renewal Notice Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>